# dune-imagedata

./: CMakeLists.txt  config.h.cmake  configure.ac  dune-imagedata.pc.in  dune.module
cmake/modules/: CMakeLists.txt  Makefile.am
doc/: Makefile.am
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt  Makefile.am
dune/imagedata/: CMakeLists.txt  Makefile.am  imagedata.hh
m4/: CMakeLists.txt  Makefile.am  dune-imagedata.m4
src/: CMakeLists.txt  Makefile.am  dune-imagedata.cc
src/rg_mesh/: CMakeLists.txt  stack100_rgmesh.mat  stack101_rgmesh.mat  stack102_rgmesh.mat  stack103_rgmesh.mat  stack104_rgmesh.mat  stack105_rgmesh.mat  stack106_rgmesh.mat  stack109_rgmesh.mat  stack10_rgmesh.mat  stack110_rgmesh.mat  stack113_rgmesh.mat  stack114_rgmesh.mat  stack115_rgmesh.mat  stack116_rgmesh.mat  stack11_rgmesh.mat  stack122_rgmesh.mat  stack123_rgmesh.mat  stack127_rgmesh.mat  stack128_rgmesh.mat  stack129_rgmesh.mat  stack12_rgmesh.mat  stack130_rgmesh.mat  stack131_rgmesh.mat  stack134_rgmesh.mat  stack135_rgmesh.mat  stack139_rgmesh.mat  stack13_rgmesh.mat  stack140_rgmesh.mat  stack141_rgmesh.mat  stack142_rgmesh.mat  stack145_rgmesh.mat  stack148_rgmesh.mat  stack149_rgmesh.mat  stack14_rgmesh.mat  stack150_rgmesh.mat  stack151_rgmesh.mat  stack152_rgmesh.mat  stack153_rgmesh.mat  stack154_rgmesh.mat  (+127 more)
src/rg_mesh/vtkpipe/: calibration.txt  convert.m  dgftrisurf.m  reorder.py  stack000001_rgmesh.dgf  stack000002_rgmesh.dgf  stack000003_rgmesh.dgf  stack000004_rgmesh.dgf  stack000005_rgmesh.dgf  stack000006_rgmesh.dgf  stack000007_rgmesh.dgf  stack000008_rgmesh.dgf  stack000009_rgmesh.dgf  stack000010_rgmesh.dgf  stack000011_rgmesh.dgf  stack000012_rgmesh.dgf  stack000013_rgmesh.dgf  stack000014_rgmesh.dgf  stack000015_rgmesh.dgf  stack000016_rgmesh.dgf  stack000017_rgmesh.dgf  stack000018_rgmesh.dgf  stack000019_rgmesh.dgf  stack000020_rgmesh.dgf  stack000021_rgmesh.dgf  stack000022_rgmesh.dgf  stack000023_rgmesh.dgf  stack000024_rgmesh.dgf  stack000025_rgmesh.dgf  stack000026_rgmesh.dgf  stack000027_rgmesh.dgf  stack000028_rgmesh.dgf  stack000029_rgmesh.dgf  stack000030_rgmesh.dgf  stack000031_rgmesh.dgf  stack000032_rgmesh.dgf  stack000033_rgmesh.dgf  stack000034_rgmesh.dgf  stack000035_rgmesh.dgf  stack000036_rgmesh.dgf  (+203 more)
src/triangulated-surfaces/: CMakeLists.txt
src/triangulated-surfaces/data/: CMakeLists.txt  parameter  sphere.dgf  sphere2.dgf
src/triangulated-surfaces/src/: CMakeLists.txt  deformation.hh  diffusion-frap.sh  diffusion-ligand.sh  diffusion.cc  diffusion.hh  diffusionmodel.hh  diffusionscheme.hh  dirichletconstraints.hh  elliptic.hh  femscheme.hh  model.hh  probleminterface.hh  reaction-diffusion-fixed.sh  reaction-diffusion-test.sh  reaction-diffusion.cc  reaction-diffusion.hh  reaction-diffusion.sh  reaction-diffusionmodel.hh  reaction-diffusionscheme.hh  test.sh
